# wonka packaging rules and instructions

[project]
name = "wonka"
description = "Extensible, lightweight, accessible constructors"
authors = [{name = "Corey Rayburn Yung", email = "coreyrayburnyung@gmail.com"}]
version = "0.1.1"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed"]
keywords = [
    "factory",
    "construction",
    "constructor",
    "design pattern"]
dependencies = [
    "camina",
    "miller"]

[project.urls]
Documentation = "https://WithPrecedent.github.io/wonka"
Repository = "https://github.com/WithPrecedent/wonka"
Issues = "https://github.com/WithPrecedent/wonka/issues"
Discussions = "https://github.com/WithPrecedent/wonka/discussions"
Changelog = "https://WithPrecedent.github.io/wonka/changelog"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = ["pdm-multirun"]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty >= 0.10"]
ci-quality = ["wonka[duty, docs, quality, typing, security]"]
ci-tests = ["wonka[duty, tests]"]
docs = [
    "black >= 23.1",
    "markdown-callouts >= 0.2",
    "markdown-exec >= 0.5",
    "mkdocs >= 1.3",
    "mkdocs-coverage >= 0.2",
    "mkdocs-gen-files >= 0.3",
    "mkdocs-git-committers-plugin-2 >= 1.1",
    "mkdocs-literate-nav >= 0.4",
    "mkdocs-material >= 7.3",
    "mkdocs-minify-plugin >= 0.6.4",
    "mkdocstrings[python] >= 0.18",
    "toml >= 0.10"]
maintain = [
    "black >= 23.1",
    "blacken-docs >= 1.13",
    "git-changelog >= 1.0",
    "toml >= 0.10",
    "yapf >= 0.40.1"]
quality = ["ruff >= 0.0.246",]
tests = [
    "pytest >= 6.2",
    "pytest-cov >= 3.0",
    "pytest-randomly >= 3.10",
    "pytest-xdist >= 2.4"]
typing = [
    "mypy >= 0.910",
    "types-markdown >= 3.3",
    "types-pyyaml >= 6.0",
    "types-toml >= 0.10"]
security = ["safety >= 2"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 20

[tool.yapf]
based_on_style = "google"
column_limit = 80
spaces_before_comment = 4
split_before_logical_operator = true
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = false
BLANK_LINE_BEFORE_CLASS_DOCSTRING = false
BLANK_LINE_BEFORE_MODULE_DOCSTRING = false
COALESCE_BRACKETS = true
SPACES_AROUND_DEFAULT_OR_NAMED_ASSIGN = false